# DancersMediaPlayer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainWindow.h  mainWindow.ui
SongZ/: settings.gradle.kts
SongZ/app/: .gitignore  build.gradle.kts
SongZ/app/src/androidTest/java/com/example/songz/: ExampleInstrumentedTest.java
SongZ/app/src/main/: AndroidManifest.xml
SongZ/app/src/main/java/com/example/songz/: DBHelper.java  MainActivity.java  Marker.java  MarkerAdapter.java  Song.java  SongActivity.java  SongAdapter.java
SongZ/app/src/main/res/drawable/: button_rounded_corner.xml
SongZ/app/src/main/res/layout/: activity_main.xml  activity_song.xml  item_marker.xml  item_song.xml
SongZ/app/src/main/res/values/: strings.xml  themes.xml
SongZ/app/src/main/res/values-night/: themes.xml
SongZ/app/src/test/java/com/example/songz/: ExampleUnitTest.java
SongZ/gradle/: libs.versions.toml
SongZ/gradle/wrapper/: gradle-wrapper.properties
prototype/: DancerAudioPlayer  mainWindow.cpp
